--- a/test/templates/index.html
+++ b/test/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>[[Title]]</h1>
-	<p>[[Main page of the application]]</p>
+	<p>[[Application main page]]</p>
 	<i class="fa fa-user fa-4x"></i>
 	[[User name]]: Ricardo Memoria
 	<br>
